fix: fixed the style of login page on mobile devices

--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 25%;
+    width: 18rem;
     border: #ffffff0b 1px solid;
     border-radius: 16px;
     -webkit-border-radius: 16px;
